skflag modified comm 2

--- a/flag_of_south_korea.html
+++ b/flag_of_south_korea.html
@@ -254,7 +254,7 @@ background-color: white;
 	<hr class="right0">
 
 	<div class="abs">
-<img src="assets/img/skflag.jpg" alt="No Image" width="208px" height="200px">
+<img src="D:\ALL IN ONE\JOB RELATED\Web Development Course 2020\assignment1\img\skflag.jpg" alt="No Image" width="208px" height="200px">
 
 	</div>
 	<div class="line"></div>
